Добавил немного слов

--- a/hangman.html
+++ b/hangman.html
@@ -13,7 +13,16 @@
             "программа",
             "макака",
             "прекрасный",
-            "оладушек"
+            "оладушек",
+            "педикулёз",
+            "выхухоль",
+            "россомаха",
+            "сущность",
+            "поэтапность",
+            "напыщенность",
+            "возвышенность",
+            "экспозиция",
+            "индульгенция"
             ];
 
         // Выбираем случайное слово
