--- a/hangman.html
+++ b/hangman.html
@@ -50,6 +50,7 @@
                 alert("Пожалуйста, введите только одну букву.");
             } else {
                 // Обновляем состояние игры
+                guess = guess.toLocaleLowerCase();
                 for (var j = 0; j < word.length; j++) {
                     if (word[j] === guess) {
                         answerArray[j] = guess;
