--- a/hangman.html
+++ b/hangman.html
@@ -55,7 +55,7 @@
                 guess = guess.toLocaleLowerCase();
                 guesses--;
                 for (var j = 0; j < word.length; j++) {
-                    if (word[j] === guess) {
+                    if (word[j] === guess && answerArray[j] === "_") {
                         answerArray[j] = guess;
                         remainingLetters--;
                     }
